# book-club-be

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  API_SPEC.md  CLAUDE.md  Dockerfile  alembic.ini  package.json  pom.xml  pyproject.toml  qodana.yaml  render.yaml  repomix.config.json  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/: copilot-instructions.md  labeler.yml  pull_request_template.md
.github/workflows/: auto-approve.yml  ci-cd.yml  ci.yml  codeql.yml  issue-on-ci-failure.yml  issue-security-scan.yml  qodana_code_quality.yml
alembic/: env.py
alembic/versions/: a22ad37f3348_add_fk_indexes.py  b1c2d3e4f5a6_add_supabase_user_id.py  c3d4e5f6a7b8_club_event_refactor.py  d4e5f6a7b8c9_add_event_cover_url.py  de70ba150c30_initial_schema.py  e5f6a7b8c9d0_add_book_title_to_events.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  base.py  chat.py  club.py  club_ban.py  club_member.py  event.py  meeting.py  quiz.py  randomizer.py  user.py
app/routers/: auth.py  chat.py  clubs.py  events.py  geocode.py  health.py  meetings.py  members.py  quizzes.py  randomizer.py  upload.py  users.py
app/schemas/: auth.py  chat.py  clubs.py  events.py  geocode.py  quizzes.py  randomizer.py  users.py
app/services/: auth_service.py  club_service.py  event_service.py  geocoding_service.py
tests/: conftest.py  test_auth.py  test_auth_service.py  test_chat.py  test_clubs.py  test_events.py  test_geocode.py  test_health.py  test_meetings.py  test_members.py  test_quizzes.py  test_randomizer.py  test_users.py
